--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,17 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
+/* .fa-whatsapp  {
+  color:#fff;
+  background:
+  linear-gradient(#25d366,#25d366)10px 84%/10px 15px no-repeat, 
+  radial-gradient(#25d366 60%,transparent 0);
+} */
 
 .App-header {
   background-color: #282c34;
